# libmm

./: .clang-format  .gitignore  README.md  meson.build
.github/workflows/: ci.yaml
doc/: Doxyfile.in  meson.build
include/: doxygen.h
include/freebsd/sys/sys/: bitcount.h  bitstring.h  queue.h
include/mm/: alloc.h  mmio.h  mock_mmio.h  rb.h  rbi.h  slab.h  slab_arena.h  string.h  track.h
include/mm/config/: cdefs.h  config.h  critical.h  mutex.h  panic.h  thread.h
src/: alloc.c  meson.build  mock_mmio.c  rb.c  rbi.c  slab.c  slab_arena.c  string.c
test/: meson.build  test_alloc.cpp  test_alloc_track.cpp  test_mmio.cpp  test_rb.cpp  test_rbi.cpp  test_slab.cpp  test_slab_arena.cpp  test_slab_invalid.cpp  test_slab_noalign.cpp  test_slab_static.cpp  test_string.cpp
